# video-hls-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.githooks/: pre-commit
.github/workflows/: ci-cd.yml
scripts/: deploy.sh
src/: config.rs  errors.rs  main.rs  models.rs
src/handlers/: health.rs  image.rs  mod.rs  video.rs
src/services/: ffmpeg.rs  hls.rs  mod.rs  upload.rs
